# P1900_SIN_OTAU

./: .gitignore  CHANGELOG.txt  CLAUDE.md  README_FR.md  README_NODON.md
OTA_FTP_App/: .gitignore  DEPLOIEMENT.md  README.md  build.bat  build.sh  pyproject.toml  requirements.txt  run.py  secrets.ini.template
OTA_FTP_App/src/: main.py
OTA_FTP_App/src/domain/: config_ini.py  firmware_validation.py  scan_filter.py
OTA_FTP_App/src/secret/: __init__.py  crypto.py  machine_id.py  secret_loader.py  secrets_storage.py
OTA_FTP_App/src/sftp/: client.py  product_repo.py
OTA_FTP_App/src/ui/: about_dialog.py  add_variant_wizard.py  config_editor.py  main_window.py  new_product_wizard.py  product_card.py  product_detail.py  product_gallery.py  replace_fw_dialog.py  styles.qss
OTA_FTP_App/src/ui/themes/: win98.qss
OTA_FTP_App/src/util/: image_cache.py  settings.py
OTA_FW_Pro/1_Up_Power_SP_RS/: 128b-0109-030105-700_nodon_sin_xx_met_fm_stm32_V030105.gbl
OTA_FW_Pro/2_Up_Ant_2CH/: 128b-0002-030D-700_p1771_nodon_sin_2_fw_efr32_V030D.zigbee
OTA_FW_Pro/3_Down_Power_2CH/: 128b-0102-030104-700_nodon_sin_xx_met_fm_stm32_V030104.zigbee
OTA_FW_Pro/3_Down_Power_RS/: 128b-0109-030104-700_nodon_sin_xx_met_fm_stm32_V030104.zigbee
OTA_FW_Pro/4_Down_Ant_RS/: 128b-0009-0301-700_p1771_nodon_sin_rs_fw_efr32_V0301.zigbee
docs/: Structure_Serveur_SFTP.docx  Structure_Serveur_SFTP_simplified.docx  ~$ructure_Serveur_SFTP.docx
mobile/: build.gradle.kts
mobile/src/main/: AndroidManifest.xml
mobile/src/main/res/drawable/: ic_circle_orange.xml  ic_circle_red.xml  ic_ota_failure.xml  (+1 more)
(+37 files in other folders)
